--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,7 @@
 {
-  "presets": ["react", "es2015", "stage-0"],
-  "env": {
-    "dev": {
-      "plugins": [["react-transform", {
-        "transforms": [{
-          "transform": "react-transform-hmr",
-          "imports": ["react"],
-          "locals": ["module"]
-        }]
-      }]]
-    }
-  }
+  "presets": ["@babel/preset-env","@babel/preset-react"],
+  "plugins": [
+    "@babel/plugin-proposal-function-bind",
+    "@babel/plugin-proposal-class-properties"
+  ]
 }
