--- a/package.json
+++ b/package.json
@@ -18,19 +18,21 @@
   },
   "homepage": "https://github.com/jiafuyuan1747/webpack-react#readme",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-function-bind": "^7.2.0",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-stage-0": "^7.0.0",
+    "babel-loader": "^8.0.6",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.2",
     "jest": "^24.8.0",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.4.1"
   },
   "dependencies": {
-    "@babel/preset-react": "^7.0.0",
-    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^2.1.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
